--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e html,js,css app.js"
+    "start": "nodemon -e html,js,css ./app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "nunjucks": "^3.0.1",
-    "pg": "^7.3.0",
+    "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.10.0"
   }
